--- a/src/Dreamhouse/force-app/main/default/classes/HouseService.cls
+++ b/src/Dreamhouse/force-app/main/default/classes/HouseService.cls
@@ -3,6 +3,7 @@ public with sharing class HouseService {
 
     }
 
+    @AuraEnabled(cacheable=true)
     public static List<House__c> getRecords()
     {
         try {
